// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Collapsible default 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
}

.c2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: inherit;
  font-family: Nunito Sans;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  border: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-weight: bold;
  border-radius: 12px;
  width: 100%;
  border: none;
  border-radius: 0;
  padding: 10px 0;
  text-align: left;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c2 + .content {
  overflow: hidden;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <button
      className="c2"
    >
      Estado
    </button>
  </div>
</div>
`;

exports[`Collapsible main 1`] = `
[
  .c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 33.33333333333333%;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
}

.c2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: inherit;
  font-family: Nunito Sans;
  font-weight: bold;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  border: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  position: relative;
  width: 100%;
}

.c2 + .content {
  overflow: hidden;
}

.c3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  width: 16px;
  height: 16px;
}

<div
    className="c0"
    width={0.3333333333333333}
  >
    <div
      className="c1"
    >
      <button
        className="c2"
      >
        <div
          className="c3"
          style={
            {
              "color": "#DF1E02",
            }
          }
        >
          <i
            className="icon-emprendimientos"
            style={
              {
                "bottom": "0px",
                "fontSize": "16px",
                "height": "16px",
                "left": "-0.5px",
                "position": "absolute",
                "right": "0px",
                "top": "-1px",
                "width": "16px",
              }
            }
          />
        </div>
        <span
          style={
            {
              "color": "#384248",
              "fontWeight": "bold",
            }
          }
        >
          Emprendimientos
        </span>
      </button>
    </div>
    <div
      className="content"
      style={
        {
          "height": "auto",
        }
      }
    />
  </div>,
  .c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 33.33333333333333%;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
}

.c3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  width: 16px;
  height: 16px;
}

.c2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: inherit;
  font-family: Nunito Sans;
  font-weight: normal;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  border: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  position: relative;
  width: 100%;
}

.c2 + .content {
  overflow: hidden;
}

<div
    className="c0"
    width={0.3333333333333333}
  >
    <div
      className="c1"
    >
      <button
        className="c2"
      >
        <div
          className="c3"
          style={
            {
              "color": "#49565D",
            }
          }
        >
          <i
            className="icon-emprendimientos"
            style={
              {
                "bottom": "0px",
                "fontSize": "16px",
                "height": "16px",
                "left": "-0.5px",
                "position": "absolute",
                "right": "0px",
                "top": "-1px",
                "width": "16px",
              }
            }
          />
        </div>
        <span
          style={
            {
              "color": "#49565D",
              "fontWeight": "normal",
            }
          }
        >
          Emprendimientos
        </span>
      </button>
    </div>
  </div>,
  .c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 33.33333333333333%;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
}

.c3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  width: 16px;
  height: 16px;
}

.c2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: inherit;
  font-family: Nunito Sans;
  font-weight: normal;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  border: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  position: relative;
  width: 100%;
}

.c2 + .content {
  overflow: hidden;
}

.c4 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  line-height: 14px;
  display: inline-block;
  font-size: 10px;
  font-family: primary;
  text-align: center;
  font-weight: bold;
  border: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: static;
}

<div
    className="c0"
    width={0.3333333333333333}
  >
    <div
      className="c1"
    >
      <button
        className="c2"
      >
        <div
          className="c3"
          style={
            {
              "color": "#49565D",
            }
          }
        >
          <i
            className="icon-emprendimientos"
            style={
              {
                "bottom": "0px",
                "fontSize": "16px",
                "height": "16px",
                "left": "-0.5px",
                "position": "absolute",
                "right": "0px",
                "top": "-1px",
                "width": "16px",
              }
            }
          />
        </div>
        <span
          style={
            {
              "color": "#49565D",
              "fontWeight": "normal",
            }
          }
        >
          Emprendimientos
        </span>
        <div
          className="c4"
          style={
            {
              "position": "absolute",
              "right": "10px",
            }
          }
        >
          2
        </div>
      </button>
    </div>
  </div>,
]
`;
